--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Fa<span class="text-primary">r</span>han</h3>
             <ul>
@@ -25,9 +25,16 @@
         </nav>
         <div class="banner">
             <div class="banner-content">
+                <h4 class="banner-greetings dark-2">Hi, I am</h4>
+                <h1 class="banner-title">Fahmid Fuad Farhan</h1>
+                <p class="banner-description">Shot what able cold new 
+                    see hold.Friendly as an betrayed formerly he. Morning
+                     because as to society behaved moments.</p>
+                     <button class="btn-primary">Download CV</button>
+                     <button class="btn-primary">Contact</button>
 
             </div>
-            <img src="F:/Projects PH/Projects/portfolio-resources/images/image.jpg" alt="">
+            <img class="banner-profile-pic" src="images/image.png" alt="">
         </div>
     </header>
     <main>
