--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-bg">
         <nav>
             <h3 class="nav-title">Fa<span class="text-primary">r</span>han</h3>
             <ul>
@@ -27,17 +27,77 @@
             <div class="banner-content">
                 <h4 class="banner-greetings dark-2">Hi, I am</h4>
                 <h1 class="banner-title">Fahmid Fuad Farhan</h1>
-                <p class="banner-description">Shot what able cold new 
+                <p class="banner-description">Shot what able cold new
                     see hold.Friendly as an betrayed formerly he. Morning
-                     because as to society behaved moments.</p>
-                     <button class="btn-primary">Download CV</button>
-                     <button class="btn-primary">Contact</button>
+                    because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
 
             </div>
             <img class="banner-profile-pic" src="images/image.png" alt="">
         </div>
     </header>
     <main>
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="font-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="itemtitle">Name</p>
+                    <p class="item-description">Fahmid Fuad Farhan </p>
+                </div>
+                <div class="about-item">
+                    <p class="itemtitle">Email</p>
+                    <p class="item-description">fuad.eee.fec@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="itemtitle">Date of Birth</p>
+                    <p class="item-description">Ddec 25, 1998</p>
+                </div>
+                <div class="about-item">
+                    <p class="itemtitle">From</p>
+                    <p class="item-description">Sunamganj, bangladesh</p>
+                </div>
+            </div>
+        </section>
+        <section class="skills">
+            <h3 class="section-title text-center">
+                What I do
+            </h3>
+            <p class="section-description text-center">I have more than 10 years experience building software for
+                clients all over
+                the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
+                find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h4 class="skill-title">Vanilla Javascript</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
