--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/7187a8f36f.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="open-sans-normal">
@@ -30,8 +31,8 @@
                 <p class="banner-description">Shot what able cold new
                     see hold.Friendly as an betrayed formerly he. Morning
                     because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
 
             </div>
             <img class="banner-profile-pic" src="images/image.png" alt="">
@@ -154,7 +155,7 @@
                     </div>
                 </div>
             </div>
-            <div class="text-center resume-download-cv"><button class="btn-primary">Download CV</button></div>
+            <div class="text-center resume-download-cv"><button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button></div>
         </section>
 
     </main>
@@ -163,11 +164,11 @@
             <h3 class="section-title">Let's Connect</h3>
             <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
                 Monday through Friday.</p>
-                <div>
-                    <a href=""><img src="images/icons/facebook.png" alt=""></a>
-                    <a href=""><img src="images/icons/twitter.png" alt=""></a>
-                    <a href=""><img src="images/icons/insta.png" alt=""></a>
-                </div>
+            <div>
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
 
         </div>
         <div class="footer-column">
